<resources>
    <string name="app_name">HipoErp</string>
    <string name="image">image_for_app</string>
    <string name="username">zubby4real</string>
    <string name="notification_title_header">Title header</string>
    <string name="notification">title</string>
    <!--<string name="date_of_birth">Date of Birth</string>-->
    <string name="email">user@gmail.com</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="notiification_body_header">Body header</string>
    <string name="notification_body">body</string>
    <string name="date_of_birth">12 / 01/ 99</string>
    <string name="date_of_birth_header">Date of Birth</string>
    <string name="phone_number">+234 090 234 4546</string>
    <string name="close">DISMISS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
