<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="20sp"
    app:cardElevation="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/start_blue"
        android:orientation="vertical"
        android:padding="10sp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notification_title_header"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textUri|textLongMessage"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="normal"
                tools:text="@string/notification" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notiification_body_header"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri|textLongMessage"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="normal"
                tools:text="@string/notification_body" />


        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10sp"-->
            <!--android:gravity="center"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/date_of_birth_header"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="25sp"-->
                <!--android:textStyle="bold" />-->

            <!--<TextView-->
                <!--android:id="@+id/dateOfBirth"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textUri|textLongMessage"-->
                <!--android:text="@string/date_of_birth"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="25sp"-->
                <!--android:textStyle="normal"-->
                <!--tools:text="@string/date_of_birth" />-->


        <!--</LinearLayout>-->




        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20sp"-->
        <!--android:layout_marginBottom="20sp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->


        <!--<ImageView-->
        <!--android:layout_width="40sp"-->
        <!--android:layout_height="40sp"-->
        <!--android:layout_marginRight="10sp"-->
        <!--android:src="@drawable/facebook" />-->

        <!--<ImageView-->
        <!--android:layout_width="40sp"-->
        <!--android:layout_height="40sp"-->
        <!--android:layout_marginRight="10sp"-->
        <!--android:src="@drawable/twitter" />-->

        <!--<ImageView-->
        <!--android:layout_width="100sp"-->
        <!--android:layout_height="100sp"-->
        <!--android:layout_marginRight="10sp"-->
        <!--android:src="@drawable/youtube" />-->

        <!--<ImageView-->
        <!--android:layout_width="40sp"-->
        <!--android:layout_height="40sp"-->
        <!--android:layout_marginRight="10sp"-->
        <!--android:src="@drawable/gmail" />-->

        <!--<ImageView-->
        <!--android:layout_width="40sp"-->
        <!--android:layout_height="40sp"-->
        <!--android:layout_marginRight="10sp"-->
        <!--android:src="@drawable/facebook" />-->

        <!--</LinearLayout>-->


    </LinearLayout>


</androidx.cardview.widget.CardView>