<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu">

    </com.google.android.material.navigation.NavigationView>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="405dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="@drawable/gradientbackground"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/nav_icon"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:background="@color/start_blue"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                            android:minHeight="?attr/actionBarSize"
                            android:theme="?attr/windowNoTitle"
                            app:navigationIcon="@drawable/nav_icon"
                            app:titleTextColor="#fff"/>

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="45dp"
                            android:src="@drawable/profile" />



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="@string/username"
                            android:textColor="#fff"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <androidx.cardview.widget.CardView
                        android:layout_width="400dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="280dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="pending"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:text="125"
                                    android:textColor="@color/start_blue"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Completed"
                                    android:textSize="20sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:text="360"
                                    android:textColor="@color/start_blue"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_person_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="@string/username"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_email_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="@string/email"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_local_phone_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="@string/phone_number"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_date_range_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="@string/date_of_birth"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            app:srcCompat="@drawable/ic_image_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="image url"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>